--- a/baseball_cards/main_app/templates/cards/index.html
+++ b/baseball_cards/main_app/templates/cards/index.html
@@ -8,7 +8,7 @@
 <section class="page-header">
   <h1>Card List</h1>
   <img
-    src="{% static 'images/foreign-card.jpg' %}"
+    src="{% static 'images/foriegn-card.jpg' %}"
     alt="A foreign card"
   />
   <img
