--- a/baseball_cards/main_app/templates/base.html
+++ b/baseball_cards/main_app/templates/base.html
@@ -13,7 +13,7 @@
         type="image/png"
         href="{% static 'images/jackieR.jpg' %}"
         />
-        <img src="{% static 'images/jim_thome.jpg' %}" alt="The Baseball Cards Collector Logo" />
+        <img src="{% static 'images/jim_thome.jpg' %}" height="200px" width="400px" alt="The Baseball Cards Collector Logo" />
 
 
     <title>Baseball Cards Collector</title>
@@ -22,9 +22,9 @@
   </head>
   <body>
     <header>
-            <div class="header-logo-container" style="width: 40px; height: 100px;">
+            <div class="header-logo-container" style="width: 400px; height: 100px;">
         <a href="{% url 'home' %}">
-            <img src="{% static 'images/roberto_clemente.jpg' %}" alt="The Baseball Cards Collector Logo" />
+            <img src="{% static 'images/roberto_clemente.jpg' %}" height="100px" alt="The Baseball Cards Collector Logo" />
         </a>
         </div>
       <nav>
