--- a/baseball_cards/main_app/templates/home.html
+++ b/baseball_cards/main_app/templates/home.html
@@ -23,7 +23,8 @@
     <header>
             <div class="header-logo-container">
         <a href="{% url 'home' %}">
-            <img src="{% static 'images/Baseball-Cards.jpg' %}" alt="The Baseball Cards Collector Logo" />  
+          Baseball-Cards Collector
+            <!-- <img src="{% static 'images/Baseball-Cards.jpg' %}" height="450px" alt="The Baseball Cards Collector Logo" />   -->
         </a>
         </div>
       <nav>
