--- a/baseball_cards/main_app/templates/home.html
+++ b/baseball_cards/main_app/templates/home.html
@@ -1,42 +1,21 @@
-{% load static %}
+{% extends 'base.html' %} {% load static %} {% block head %}
+<link
+  rel="stylesheet"
+  href="{% static 'css/home.css' %}"
+/>
+{% endblock %} {% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="" />
-    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-    <link
-        rel="shortcut icon"
-        type="image/png"
-        href="{% static 'images/mickey_mantle.jpg' %}"
-        />
-    
+<section class="logo-container">
+  <div class="cat-container">
+    <img
+      src="{% static 'images/Baseball-Cards.jpg' %}"
+      alt="The Collector"
+    />
+  </div>
+  <img
+    src="{% static 'images/topps.png' %}"
+    alt="Text reads: Topps" height="100px"
+  />
+</section>
 
-    <title>Baseball Cards Collector</title>
-    {% block head %} 
-    {% endblock %}
-  </head>
-  <body>
-    <header>
-            <div class="header-logo-container">
-        <a href="{% url 'home' %}">
-          Baseball-Cards Collector
-            <!-- <img src="{% static 'images/Baseball-Cards.jpg' %}" height="450px" alt="The Baseball Cards Collector Logo" />   -->
-        </a>
-        </div>
-      <nav>
-        <ul>
-          <li><a href="/cards">All Cards</a></li>
-          <li><a href="/about">About</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-     {% block content %} 
-     {% endblock %}
-     </main>
-  </body>
-</html>
+{% endblock %}
