--- a/baseball_cards/main_app/templates/base.html
+++ b/baseball_cards/main_app/templates/base.html
@@ -13,9 +13,27 @@
       <h1><a href="{% url 'home' %}">Baseball Card Collector</a></h1>
       <nav>
         <ul>
+          {% if user.is_authenticated %}
           <li><a href="{% url 'card-index' %}">All Cards</a></li>
+          <li><a href="{% url 'stat-index' %}">Player Stats</a></li>
+          <li><a href="{% url 'sale-index' %}">What Just Sold?!</a></li>
           <li><a href="{% url 'card-create' %}">Add Card</a></li>
+          <li><a href="{% url 'sale-create' %}">Add a Sale</a></li>
+           <li><a href="{% url 'about' %}">About</a></li>
+          
+            <li>
+            <form id="logout-form" method="post" action="{% url 'logout' %}">
+              {% csrf_token %}
+              <button type="submit">Log out</button>
+            </form>
+          </li>
+
+          {% else %}
+
           <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'home' %}">Login</a></li>
+          <li><a href="{% url 'signup' %}">Sign Up</a></li>
+          {% endif %}
         </ul>
       </nav>
     </header>
