--- a/baseball_cards/main_app/templates/main_app/sale_list.html
+++ b/baseball_cards/main_app/templates/main_app/sale_list.html
@@ -7,8 +7,8 @@
 
 <section class="page-header">
   <h1>All Sales</h1>
-  <img src="{% static 'images/string.svg' %}" alt="A ball of string" />
-  <img src="{% static 'images/mouse.svg' %}" alt="A mouse" />
+  <img src="{% static 'images/foriegn-card.jpg' %}" alt="A ball of string" />
+  <img src="{% static 'images/oldest.jpg' %}" alt="A mouse" />
 </section>
 
 <section class="card-container">
@@ -17,7 +17,7 @@
       <div class="card-bg" style="background-color: {{ sale.color }}"></div>
       <a href="{% url 'sale-detail' sale.id %}">
         <div class="card-content">
-          <h2>{{ sale.name }}</h2>
+          <h2>{{ sale.card.name }}</h2>
           <p>A {{ sale.color }} sale</p>
         </div>
       </a>
