--- a/baseball_cards/main_app/templates/cards/detail.html
+++ b/baseball_cards/main_app/templates/cards/detail.html
@@ -96,7 +96,7 @@
   </table>
 {% else %}
   <div class="subsection-content">
-    <p>⚠️ {{card.name}} has not had any stats. Add one now!</p>
+    <p>⚠️ {{card.name}} has no stats. Add one now!</p>
   </div>
 {% endif %}
 
