--- a/baseball_cards/main_app/static/css/cards/card-detail.css
+++ b/baseball_cards/main_app/static/css/cards/card-detail.css
@@ -111,3 +111,22 @@
   }
 }
 
+.sold,
+.unsold {
+  display: block;
+  text-align: center;
+  margin-top: 40px;     
+  margin-bottom: 20px; 
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+
+.sold {
+  color: #16a34a; 
+}
+
+.unsold {
+  color: #2563eb; 
+}
+
