--- a/baseball_cards/main_app/static/css/cards/card-detail.css
+++ b/baseball_cards/main_app/static/css/cards/card-detail.css
@@ -5,8 +5,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;          
+  max-width: 100%;          
+  overflow-x: hidden;      
+  box-sizing: border-box;   
 }
-
 /* ---------- Image ---------- */
 .card-img img {
   width: 75%;
@@ -114,19 +117,18 @@
 .sold,
 .unsold {
   display: block;
+  width: 100%;
   text-align: center;
-  margin-top: 40px;     
-  margin-bottom: 20px; 
-  font-size: 1.4rem;
+  margin-top: 60px; 
+  margin-bottom: 20px;
+  font-size: 1.6rem;
   font-weight: 600;
 }
 
-
 .sold {
-  color: #16a34a; 
+  color: #16a34a; /* green */
 }
 
 .unsold {
-  color: #2563eb; 
+  color: #2563eb; /* blue */
 }
-
